RESOLVED FIXED315043
DiagnosticLoggingClient.h: add missing StringHash.h include
https://bugs.webkit.org/show_bug.cgi?id=315043
Summary DiagnosticLoggingClient.h: add missing StringHash.h include
Simon Lewis
Reported 2026-05-18 13:58:06 PDT
ValuePayload uses HashMap<String, ...>::set(), which instantiates DefaultHash<String> -- defined in StringHash.h, not included here. After 296773@main put this header in the WebCore_Private clang module, building that module fails on the cmake-mac path (swiftc's clang importer): HashTable.h:893:27: error: definition of 'DefaultHash<WTF::String>' must be imported from module 'wtf.Core.text.StringHash' before it is required Non-modular builds and xcodebuild are unaffected because some earlier header in the TU pulls in StringHash.h.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-18 13:58:12 PDT
EWS
Comment 2 2026-05-18 14:41:06 PDT
Committed 313440@main (756f5f9832b5): <https://commits.webkit.org/313440@main> Reviewed commits have been landed. Closing PR #65129 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.