DiagnosticLoggingClient.h: add missing StringHash.h include https://bugs.webkit.org/show_bug.cgi?id=315043 rdar://177373691

Reviewed by Pascoe.

ValuePayload uses HashMap<String, ...>::set(), which instantiates
DefaultHash<String> -- defined in StringHash.h, not included here.
After 296773@main (43f2f246680d) put this header in the
WebCore_Private clang module, building that module fails on the
cmake-mac path (swiftc's clang importer):

  HashTable.h:893:27: error: definition of 'DefaultHash<WTF::String>'
  must be imported from module 'wtf.Core.text.StringHash' before it
  is required

Non-modular builds and xcodebuild are unaffected because some
earlier header in the TU pulls in StringHash.h.

* Source/WebCore/page/DiagnosticLoggingClient.h:

Canonical link: https://commits.webkit.org/313440@main